[package]
name = "auto_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
validator = "0.14"
argon2 = "0.3"
jsonwebtoken = "8.1"
tower-http = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }